--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   },
   "homepage": "https://github.com/InboxSDK/hello-world#readme",
   "dependencies": {
-    "@inboxsdk/core": "^1.1.6"
+    "@inboxsdk/core": "^1.1.6",
+    "axios":"^0.21.2"
   },
   "devDependencies": {
     "copy-webpack-plugin": "^11.0.0",
