--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "source-map-loader": "^4.0.1",
     "webpack": "^5.65.0",
     "webpack-cli": "^4.9.1",
-    "webpack-merge": "^5.8.0"
+    "webpack-merge": "^5.8.0",
+    "html-webpack-plugin": "^5.5.0"
   }
 }
