--- a/static/manifest.json
+++ b/static/manifest.json
@@ -22,5 +22,13 @@
   "host_permissions": [
     "https://mail.google.com/"
   ],
+  "browser_action": {
+    "default_popup": "popup.html",
+    "default_icon": {
+      "16": "icon16.png",
+      "48": "icon48.png",
+      "128": "icon128.png"
+    }
+  },
   "manifest_version": 3
 }
