--- a/static/manifest.json
+++ b/static/manifest.json
@@ -17,18 +17,14 @@
     "service_worker": "background.js"
   },
   "permissions": [
-    "scripting"
+    "scripting",
+    "activeTab"
   ],
   "host_permissions": [
     "https://mail.google.com/"
   ],
-  "browser_action": {
-    "default_popup": "popup.html",
-    "default_icon": {
-      "16": "icon16.png",
-      "48": "icon48.png",
-      "128": "icon128.png"
-    }
+  "action": {
+    "default_popup": "popup.html"
   },
   "manifest_version": 3
 }
