--- a/static/manifest.json
+++ b/static/manifest.json
@@ -18,7 +18,8 @@
   },
   "permissions": [
     "scripting",
-    "activeTab"
+    "activeTab",
+    "storage"
   ],
   "host_permissions": [
     "https://mail.google.com/"
