added popup script with css and custom updateKey operation (#2)
* added popup script with css and custom updateKey operation

* added popup script as part of static content

* updated popup key

* updated local storage test extension

* updated local storage test extension

* updated local storage test extension

* added static gpt response to debug response parsing error

* added GPT Parsing logic

* refactored innerHTML function

--- a/static/manifest.json
+++ b/static/manifest.json
@@ -17,10 +17,15 @@
     "service_worker": "background.js"
   },
   "permissions": [
-    "scripting"
+    "scripting",
+    "activeTab",
+    "storage"
   ],
   "host_permissions": [
     "https://mail.google.com/"
   ],
+  "action": {
+    "default_popup": "popup.html"
+  },
   "manifest_version": 3
 }
