removed package-lock and updated ci steps

--- a/.github/workflows/extension-publisher.yml
+++ b/.github/workflows/extension-publisher.yml
@@ -1,9 +1,9 @@
-name: Run npm start on Tag
+name: Run npm start on master push
 
 on:
   push:
-    tags:
-      - '*'
+    branches:
+      - master
 
 jobs:
   build:
